# limpuai-wit

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml
.claude/agents/: rust-expert.md  spec-code-reviewer.md  typescript-expert.md
.claude/commands/: cc-docs.md  cc-end.md  cc-load.md  cc-review.md  cc-start.md  cc-wave.md
.claude/skills/arch-design-expert/: SKILL.md
.claude/skills/backend-expert/: SKILL.md
.claude/skills/prd-expert/: SKILL.md
.specs/: get-it-done.md  might-it-be.md
.specs/arrow-parquet/: design.md  requirements.md  summary.md  tasks.md
.specs/limpuai-wit-image/: design.md  requirements.md  session-2026-05-07.md  summary.md  tasks.md
.specs/polars-component/: design.md  requirements.md  session-2026-05-06.md  summary.md  tasks.md
.specs/symphonia/: design.md  requirements.md  session-2026-05-07.md  summary.md  tasks.md
crates/limpuai-wit-arrow/: Cargo.toml
crates/limpuai-wit-arrow/src/: lib.rs
crates/limpuai-wit-image/: Cargo.toml
crates/limpuai-wit-image/src/: lib.rs
crates/limpuai-wit-parquet/: Cargo.toml
crates/limpuai-wit-parquet/src/: lib.rs
crates/limpuai-wit-polars/: Cargo.toml  README.md
crates/limpuai-wit-polars/src/: lib.rs
crates/limpuai-wit-symphonia/: Cargo.toml
crates/limpuai-wit-symphonia/src/: lib.rs
crates/limpuai-wit-symphonia/tests/fixtures/: sine_flac.flac
scripts/: dedup-licenses.py
wit/: arrow-parser.wit  audio-decoder.wit  image-processor.wit  parquet-parser.wit  polars-parser.wit  types.wit
